QPID-7020: uint16 AMQP0-10 message properties decoded as uint8

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1726487 13f79535-47bb-0310-9956-ffa450edef68